[package]
name = "elaina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ast",
    "ast_lowering",
    "thir_lowering",
    "codegen_llvm",
    "ir",
    "lexer",
    "parser",
    "thir",
    "ty",
]

[dependencies]
ast = { path = "ast" }
ast_lowering = { path = "ast_lowering" }
thir_lowering = { path = "thir_lowering" }
codegen_llvm = { path = "codegen_llvm" }
ir = { path = "ir" }
lexer = {path = "lexer" }
parser = { path = "parser" }
thir = {path = "thir" }
ty = { path = "ty" }
clap = { version = "3.0.14", features = ["derive"] }
