[package]
name = "elaina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "compiler/ast",
    "compiler/ast_lowering",
    "compiler/thir_lowering",
    "compiler/codegen_llvm",
    "compiler/ir",
    "compiler/lexer",
    "compiler/parser",
    "compiler/thir",
    "compiler/ty",
]

[dependencies]
ast = { path = "compiler/ast" }
ast_lowering = { path = "compiler/ast_lowering" }
thir_lowering = { path = "compiler/thir_lowering" }
codegen_llvm = { path = "compiler/codegen_llvm" }
ir = { path = "compiler/ir" }
lexer = {path = "compiler/lexer" }
parser = { path = "compiler/parser" }
thir = {path = "compiler/thir" }
ty = { path = "compiler/ty" }
clap = { version = "3.0.14", features = ["derive"] }
