[package]
name = "elaina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "compiler/ast",
    "compiler/ast_lowering",
    "compiler/codegen_llvm",
    "compiler/ir",
    "compiler/lexer",
    "compiler/lexer_old",
    "compiler/parser",
    "compiler/span",
    "compiler/thir",
    "compiler/thir_lowering",
    "compiler/ty",
]

[dependencies]
ast = { path = "compiler/ast" }
ast_lowering = { path = "compiler/ast_lowering" }
codegen_llvm = { path = "compiler/codegen_llvm" }
ir = { path = "compiler/ir" }
lexer = { path = "compiler/lexer" }
lexer_old = {path = "compiler/lexer_old" }
parser = { path = "compiler/parser" }
span = { path = "compiler/span" }
thir = {path = "compiler/thir" }
thir_lowering = { path = "compiler/thir_lowering" }
ty = { path = "compiler/ty" }

clap = { version = "3.0.14", features = ["derive"] }
