[package]
name = "codegen_llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mir = { path = "../mir" }
ty = { path = "../ty" }

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
typed-index-collections = "3.0"